--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ before_script:
 test:
   stage: test
   script:
-    - ssh $SSH_USER@$SSH_URL "cd subsites/$DEV_URL/ &&
+    - ssh $SSH_USER@$SSH_URL "cd $DEV_PATH &&
           git pull origin develop && php wp-cli.phar plugin update --all && php wp-cli.phar language plugin update -all"
   environment:
      name: development
@@ -25,7 +25,7 @@ test:
 staging:
   stage: staging
   script:
-    - ssh $SSH_USER@$SSH_URL "cd subsites/$STAG_URL/ &&
+    - ssh $SSH_USER@$SSH_URL "cd $STAG_PATH &&
           git pull origin staging  && php wp-cli.phar plugin update --all && php wp-cli.phar language plugin update -all"
   environment:
      name: development
@@ -36,7 +36,7 @@ staging:
 production:
   stage: production
   script:
-   - ssh $SSH_USER@$SSH_URL "cd www/ &&
+   - ssh $SSH_USER@$SSH_URL "cd $PROD_PATH &&
           git pull origin master"
   environment:
     name: production
